[package]
name = "cryptom-protocol"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptom_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
mpl-token-metadata = "4.0.0"
solana-program = "=1.18.12"
spl-associated-token-account = "3.0.2"
